# PyIPS

./: .gitignore  README.md  docker-compose.yml  requirements.txt
.github/workflows/: rust-ci.yml  security.yml
config/: ips.yaml
deploy/: Dockerfile
python-control/pyips_pro/api/: app.py
python-control/pyips_pro/core/: engine.py
rust-core/: Cargo.toml
rust-core/src/: lib.rs
rust-core/src/blocking/: xdp.rs
rust-core/src/detection/: ac.rs
scripts/: install-systemd.sh
