[package]
name = "pyips_core"
version = "1.0.0"
edition = "2021"

[lib]
name = "pyips_core"
crate-type = ["cdylib", "rlib"]

[dependencies]
# Packet capture
libbpf = "0.22"
pcap = "1.2"
netlink-packet-route = "0.19"
af-xdp = "0.4"

# Pattern matching
aho-corasick = "1.1"
regex = "1.10"

# Protocol parsing
nom = "7.1"
http = "1.0"
tls-parser = "0.13"
dns-parser = "0.10"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# FFI bindings
pyo3 = { version = "0.20", features = ["extension-module"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Hashing and crypto
xxhash-rust = { version = "0.8", features = ["xxh3"] }
blake3 = "1.5"

# Metrics
prometheus = "0.13"

# Logging
log = "0.4"
env_logger = "0.10"

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
